--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -3,17 +3,18 @@
 	"description": "An opinionated authentication library for JavaScript.",
 	"version": "0.0.1",
 	"license": "MIT",
-	"author": {
-		"email": "hello@caoimhe.dev",
-		"name": "Caoimhe Byrne",
-		"url": "https://caoimhe.dev"
-	},
+	"private": "true",
 	"type": "module",
 	"scripts": {
 		"build": "tsup",
 		"start": "tsup && node ./dist/index.js"
 	},
+	"dependencies": {
+		"obsidian": "workspace:^"
+	},
 	"devDependencies": {
+		"@obsidian/config-typescript": "workspace:^",
+		"@types/node": "^22.8.0",
 		"tsup": "^8.3.4",
 		"typescript": "^5.6.3"
 	}
