--- a/packages/obsidian/package.json
+++ b/packages/obsidian/package.json
@@ -22,6 +22,7 @@
 		"build": "tsup"
 	},
 	"devDependencies": {
+		"@obsidian/config-typescript": "workspace:^",
 		"tsup": "^8.3.4",
 		"typescript": "^5.6.3"
 	}
