--- a/packages/obsidian/package.json
+++ b/packages/obsidian/package.json
@@ -11,7 +11,9 @@
 	"type": "module",
 	"module": "dist/index.js",
 	"types": "dist/index.d.ts",
-	"files": ["dist/"],
+	"files": [
+		"dist/"
+	],
 	"exports": {
 		".": {
 			"import": "./dist/index.js",
@@ -23,6 +25,7 @@
 	},
 	"devDependencies": {
 		"@obsidian/config-typescript": "workspace:^",
+		"@types/node": "^22.8.0",
 		"tsup": "^8.3.4",
 		"typescript": "^5.6.3"
 	}
