--- a/packages/obsidian/package.json
+++ b/packages/obsidian/package.json
@@ -1,32 +1,30 @@
 {
-	"name": "obsidian",
-	"description": "An opinionated authentication library for JavaScript.",
-	"version": "0.0.1",
-	"license": "MIT",
-	"author": {
-		"email": "hello@caoimhe.dev",
-		"name": "Caoimhe Byrne",
-		"url": "https://caoimhe.dev"
-	},
-	"type": "module",
-	"module": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": [
-		"dist/"
-	],
-	"exports": {
-		".": {
-			"import": "./dist/index.js",
-			"types": "./dist/index.d.ts"
-		}
-	},
-	"scripts": {
-		"build": "tsup"
-	},
-	"devDependencies": {
-		"@obsidian/config-typescript": "workspace:^",
-		"@types/node": "^22.8.0",
-		"tsup": "^8.3.4",
-		"typescript": "^5.6.3"
-	}
+    "name": "obsidian",
+    "description": "An opinionated authentication library for JavaScript.",
+    "version": "0.0.1",
+    "license": "MIT",
+    "author": {
+        "email": "hello@caoimhe.dev",
+        "name": "Caoimhe Byrne",
+        "url": "https://caoimhe.dev"
+    },
+    "type": "module",
+    "module": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "files": ["dist/"],
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "types": "./dist/index.d.ts"
+        }
+    },
+    "scripts": {
+        "build": "tsup"
+    },
+    "devDependencies": {
+        "@obsidian/config-typescript": "workspace:^",
+        "@types/node": "^22.8.0",
+        "tsup": "^8.3.4",
+        "typescript": "^5.6.3"
+    }
 }
