--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "packageManager": "pnpm@9.12.2",
     "scripts": {
         "build": "turbo build",
+        "build-watch": "turbo build-watch",
         "format": "biome format --write ."
     },
     "devDependencies": {
