--- a/packages/adapters/stub/package.json
+++ b/packages/adapters/stub/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "obsidian",
-    "description": "An opinionated authentication library for JavaScript.",
+    "name": "@obsidian/adapter-stub",
+    "description": "A stub adapter for Obsidian, the opinionated authentication library for JavaScript.",
     "version": "0.0.1",
     "license": "MIT",
     "author": {
@@ -25,7 +25,11 @@
     "devDependencies": {
         "@obsidian/config-typescript": "workspace:^",
         "@types/node": "^22.8.0",
+        "obsidian": "workspace:^",
         "tsup": "^8.3.4",
         "typescript": "^5.6.3"
+    },
+    "peerDependencies": {
+        "obsidian": "workspace:^"
     }
 }
