--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
         "build": {
             "outputs": ["dist/**"]
         },
-        "dev": {
+        "build-watch": {
             "persistent": true,
             "cache": false
         }
