--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -10,12 +10,14 @@
         "start": "tsup && node ./dist/index.js"
     },
     "dependencies": {
-        "@obsidian/adapter-stub": "workspace:^",
-        "obsidian": "workspace:^"
+        "@obsidian/adapter-postgresql": "workspace:^",
+        "obsidian": "workspace:^",
+        "pg": "^8.13.1"
     },
     "devDependencies": {
         "@obsidian/config-typescript": "workspace:^",
         "@types/node": "^22.8.0",
+        "@types/pg": "^8.11.10",
         "tsup": "^8.3.4",
         "typescript": "^5.6.3"
     }
