--- a/packages/adapters/postgresql/package.json
+++ b/packages/adapters/postgresql/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@obsidian/adapter-postgresql",
+    "name": "@obsidian-auth/adapter-postgresql",
     "description": "A PostgreSQL adapter for Obsidian, the opinionated authentication library for JavaScript.",
     "version": "0.0.1",
     "license": "MIT",
@@ -11,9 +11,7 @@
     "type": "module",
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
-    "files": [
-        "dist/"
-    ],
+    "files": ["dist/"],
     "exports": {
         ".": {
             "import": "./dist/index.js",
@@ -23,6 +21,9 @@
     "scripts": {
         "build": "tsup",
         "build-watch": "tsup --watch"
+    },
+    "dependencies": {
+        "obsidian-auth": "workspace:^"
     },
     "devDependencies": {
         "@obsidian/config-typescript": "workspace:^",
@@ -34,7 +35,6 @@
         "typescript": "^5.6.3"
     },
     "peerDependencies": {
-        "obsidian": "workspace:^",
         "pg": "^8.13.1"
     }
 }
