--- a/packages/obsidian/package.json
+++ b/packages/obsidian/package.json
@@ -16,7 +16,9 @@
     "type": "module",
     "module": "dist/index.js",
     "types": "dist/index.d.ts",
-    "files": ["dist/"],
+    "files": [
+        "dist/"
+    ],
     "exports": {
         ".": {
             "import": "./dist/index.js",
@@ -32,5 +34,8 @@
         "@types/node": "^22.8.0",
         "tsup": "^8.3.4",
         "typescript": "^5.6.3"
+    },
+    "dependencies": {
+        "@node-rs/argon2": "^2.0.0"
     }
 }
